# AugLy-jp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: release-drafter-config.yml
.github/workflows/: publish.yml  release-drafter.yml  test.yml
augly_jp/: __init__.py  base_augmenter.py
augly_jp/augmenters/char/: char_augmenter.py
augly_jp/augmenters/word/: synonym.py  word_augmenter.py
augly_jp/text/: __init__.py
augly_jp/text/augmenters/: __init__.py  sentence.py  utils.py  word.py
augly_jp/text/functional/: __init__.py  sentence.py  word.py
augly_jp/text/transforms/: __init__.py  sentence.py  word.py
augly_jp/utils/: action.py
examples/: augly_jp_text.ipynb  google_translate.ipynb
examples/experiments/: classification_with_aug.ipynb
tests/augmenters/word/: test_word_augmenter.py
tests/text/functional/: test_sentence.py  test_word.py
tests/text/transforms/: test_sentence.py  test_word.py
