[tool.poetry]
name = "augly_jp"
version = "2021.8.25"
description = "Data Augmentation for Japanese Text"
authors = ["chck <shimekiri.today@gmail.com>"]

[tool.taskipy.tasks]
lint = { cmd = "pysen run lint", help = "execute linter" }
fmt = { cmd = "pysen run format", help = "format code" }
#test = { cmd = "task lint && task fmt && pytest -s", help = "run all test" }
test = { cmd = "task fmt && pytest -s", help = "run all test" }

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
augly = "^0.1.6"
chikkarpy = "^0.1.0"
ginza = "^4.0.6"
python-magic-bin = "^0.4.14"
gensim = "^4.0.1"
tqdm = "^4.62.2"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pysen = {extras = ["lint"], version = "^0.9.1"}
absl-py = ">=0.9,<0.13"
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"
taskipy = "^1.8.1"
jupyterlab = "^3.1.7"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
line_length = 120
py_version = "py38"
mypy_preset = "strict"
[[tool.pysen.lint.mypy_targets]]
  paths = ["augly_jp"]

[tool.pysen.lint.source]
  includes = ["augly_jp"]
  exclude_globs = ["**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
